# SubscriptionTracker

./: README.md  pyproject.toml  subscriptions.db  ~$оговый проект.docx  Итоговый проект.docx
project/: .gitignore  README.md  index.html  setup.py
project/docs/: conf.py  index.rst
project/subscription_tracker/: __main__.py  database.py
project/tests/: test_database.py
subscription_tracker/: __init__.py  __main__.py  bot.py  models.py
